# CppSoftwareDesign

./: .gitignore  CMakeLists.txt  README.md
04-1_Visitor_Classical/: Shape.h  ShapeVisitor.h
04-2_Visitor_stdvariant/: Circle.h  Draw.h  Shape.h  Shapes.h  Square.h  main.cpp
04_Visitor_Classical/: Circle.h  Draw.h  DrawAllShapes.h  Square.h  main.cpp
04_Visitor_stdvariant/: CMakeLists.txt  DrawAllShapes.cpp  DrawAllShapes.h  Point.h  Square.h  main.cpp
05-1_Strategy_Classical/: Circle.h  DrawStrategy.h  OpenGLCircleStrategy.h  OpenGLSquareStrategy.h  Shape.h  Square.h  main.cpp
05-2_Strategy_stdfunction/: Circle.h  OpenGLCircleStrategy.h  OpenGLSquareStrategy.h  Square.h  main.cpp
05-3_Command/: Add.h  Calculator.h  CalculatorCommand.h  Subtract.h  main.cpp
06-1_Observer_Classical/: AddressObserver.h
06-2_Observer_stdfunction/: Observer.h  Person.h  main.cpp
06-3_CRTP/: DenseVector.h  DynamicVector.h  StaticVector.h  main.cpp
06-4_CRTP_concept/: DenseVector.h  DynamicVector.h  StaticVector.h  main.cpp
06-5_CRTP_mixin/: Addable.h  Distances.h  Person.h  Printable.h  StrongType.h  Swappable.h  main.cpp
06_Observer_Classical/: NameObserver.h  Observer.h  Person.h  main.cpp
07-1_Bridge_pimpl/: Person.cpp  Person.h
07-2_ExternalPolymorphism/: Circle.h  OpenGLDrawStrategy.h  Shape.h  Square.h  main.cpp
08_TypeErasure/: Circle.h  Detail.h  OpenGLDrawStrategy.h  Shape.h  Square.h  main.cpp
09-1_Decorator/: ConferenceTicket.h  CppBook.h  DecoratedItem.h  Discounted.h  Item.h  Money.h  Taxed.h  main.cpp
09-2_Decorator_allocator/: CustomAllocator.h  main.cpp
